--- a/welcome.html
+++ b/welcome.html
@@ -7,6 +7,11 @@
     <meta charset=" UTF-8"
 </head>
 <body>
-<h1>Hello world</h1>
+<h1>Hello world </h1>
+<h2> This is HTML</h2>
+<h3> HTML is for content and structure!</h3>
+<p> P tags are for paragraphs and each paragraph is separated in space</p>
+<p></p>
+
 </body>
 </html>
