--- a/welcome.html
+++ b/welcome.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html>
 
-</html>
+
 <head>
-    <title>Hello world</title>
-    <meta charset=" UTF-8"
+    <title>Welcome to Veridian Dynamics!</title>
+    <meta> charset=" UTF-8"</meta>
 </head>
 <body>
-<h1>Hello world </h1>
-<h2> This is HTML</h2>
-<h3> HTML is for content and structure!</h3>
-<p> P tags are for paragraphs and each paragraph is separated in space</p>
-<p></p>
+<h1> Welcome to Veridian Dynamics! </h1>
+<p>
+<h2> At Veridian Dynamics, we solve your problems with technology</h2>
+<hr>
+<h1>Core Values</h1>
+<ul>  <li>Competence</li> <li>Involvement</li> <li>Technology</li></ul>
+<h1>Our Process</h1>
+<ul>  <li>Plan</li> <li>Evaluate</li> <li>Implement</li></ul>
+
+    <h1>2020 Vision</h1>
+    <ul>  <li>Become #1 in Technology</li> <li>Increase Success by 20% </li> <li>Increase Business by 30%</li></ul>
+<div></div>
+<hr>
+<h1>Company Vision</h1>
+<img src="http://lorempixel.com/400/200">
+<img src="http://lorempixel.com/400/200">
+<img src="http://lorempixel.com/400/200">
+<img src="http://lorempixel.com/400/200">
+
+<h1>Our Products</h1>
+<table>
+    <tr> <th>Plan</th> <th>Price</th> <th>Feature</tr>
+    <tr><td> Starter</td> <td>$99</td> <td>Base Technology</td></tr>
+    <tr><td> Advance</td> <td>$199</td> <td>Additional Features</td></tr>
+    <tr><td> Premium</td> <td>$499</td> <td>Unlimited Support</td></tr>
+
+</table>
+
+
+<p><em>All products come our product guarantee<span><sup>TM</sup></span></em></p>
+
+
+<footer><h1>Go to the top of the page.</h1></footer>
+
 
 </body>
 </html>
