--- a/welcome.html
+++ b/welcome.html
@@ -39,7 +39,7 @@
 <p><em>All products come our product guarantee<span><sup>TM</sup></span></em></p>
 
 
-<footer><h1>Go to the top of the page.</h1></footer>
+<a href="TOP">Go To Top of Page</a>
 
 
 </body>
