Day 3 Exercise Solved-Selector Basics- css-selector
PSelectors and Properties- welcome html
Center the main heading
Add color and underlined to headers.
Add background color.

--- a/welcome.html
+++ b/welcome.html
@@ -3,33 +3,36 @@
 
 
 <head>
+    <meta> charset="UTF-8">
     <title>Welcome to Veridian Dynamics!</title>
-    <meta> charset=" UTF-8"</meta>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1> Welcome to Veridian Dynamics! </h1>
+<header>
+<h1 >Welcome to Veridian Dynamics</h1>
+</header>
 <p>
 <h2> At Veridian Dynamics, we solve your problems with technology</h2>
 <hr>
-<h1>Core Values</h1>
+<h3>Core Values</h3>
 <ul>  <li>Competence</li> <li>Involvement</li> <li>Technology</li></ul>
-<h1>Our Process</h1>
+<h3>Our Process</h3>
 <ul>  <li>Plan</li> <li>Evaluate</li> <li>Implement</li></ul>
 
-    <h1>2020 Vision</h1>
+    <h3>2020 Vision</h3>
     <ul>  <li>Become #1 in Technology</li> <li>Increase Success by 20% </li> <li>Increase Business by 30%</li></ul>
 <div></div>
 <hr>
-<h1>Company Vision</h1>
+<h4>Company Vision</h4>
 <img src="http://lorempixel.com/400/200">
 <img src="http://lorempixel.com/400/200">
 <img src="http://lorempixel.com/400/200">
 <img src="http://lorempixel.com/400/200">
 
-<h1>Our Products</h1>
+<h5>Our Products</h5>
 <table>
     <tr> <th>Plan</th> <th>Price</th> <th>Feature</tr>
-    <tr><td> Starter</td> <td>$99</td> <td>Base Technology</td></tr>
+    <tr><td> Starter</td>   <td>$99</td>   <td>Base Technology</td></tr>
     <tr><td> Advance</td> <td>$199</td> <td>Additional Features</td></tr>
     <tr><td> Premium</td> <td>$499</td> <td>Unlimited Support</td></tr>
 
