Day 3 Exercise   Solved-Selector Basics- css-selector  completed
PSelectors and Properties- welcome html completed

--- a/welcome.html
+++ b/welcome.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<html>
-
-
+<html lang="en">
 <head>
-    <meta> charset="UTF-8">
+    <meta charset="UTF-8">
+
     <title>Welcome to Veridian Dynamics!</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<header>
-<h1 >Welcome to Veridian Dynamics</h1>
+<header id="top">
+    <h1>Welcome to Veridian Dynamics</h1>
+    <h3> At Veridian Dynamics, we solve your problems with technology</h3>
 </header>
 <p>
-<h2> At Veridian Dynamics, we solve your problems with technology</h2>
+
 <hr>
-<h3>Core Values</h3>
+<h2>Core Values</h2>
 <ul>  <li>Competence</li> <li>Involvement</li> <li>Technology</li></ul>
-<h3>Our Process</h3>
+<h2>Our Process</h2>
 <ul>  <li>Plan</li> <li>Evaluate</li> <li>Implement</li></ul>
 
-    <h3>2020 Vision</h3>
+    <h2>2020 Vision</h2>
     <ul>  <li>Become #1 in Technology</li> <li>Increase Success by 20% </li> <li>Increase Business by 30%</li></ul>
 <div></div>
 <hr>
-<h4>Company Vision</h4>
+<h2>Company Vision</h2>
 <img src="http://lorempixel.com/400/200">
 <img src="http://lorempixel.com/400/200">
 <img src="http://lorempixel.com/400/200">
 <img src="http://lorempixel.com/400/200">
 
-<h5>Our Products</h5>
+<h2>Our Products</h2>
 <table>
     <tr> <th>Plan</th> <th>Price</th> <th>Feature</tr>
     <tr><td> Starter</td>   <td>$99</td>   <td>Base Technology</td></tr>
@@ -42,7 +42,7 @@
 <p><em>All products come our product guarantee<span><sup>TM</sup></span></em></p>
 
 
-<a href="TOP">Go To Top of Page</a>
+<a href="#TOP">Go To Top of Page</a>
 
 
 </body>
