--- a/css_positioning.html
+++ b/css_positioning.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Positioning Exercise</title>
+    <link rel="stylesheet" href="css/positioning.css">
+    <header> <h1>
+        <a href="https://en.wikipedia.org/wiki/Visible_spectrum">
+            Visible Spectrum Wavelengths
+        </a>
+    </h1>
+
 </head>
 <body>
+<img src="images/codeup-ribbon.png" id="ribbon">
+<div   id="red" class="boxes" ><img src ="images/codeup-arrow.png" >620-750 nm</div>
+<div id="orange" class="boxes" ><img src="images/codeup-arrow.png" >590-620 nm</div>
+<div id="yellow" class="boxes"  ><img src="images/codeup-arrow.png" >570-590 nm</div>
+<div id= "green" class="boxes" ><img src="images/codeup-arrow.png" >495-570 nm</div>
+<div id="blue" class="boxes" ><img src="images/codeup-arrow.png" >450-495 nm</div>
+<div id="pink" class="boxes" ><img src= "images/codeup-arrow.png" >380-450 nm </div>
+
 
 </body>
+
 </html>
+
