--- a/lesson layout.html
+++ b/lesson layout.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/layout examples.css">
     <title> layout examples</title>
 </head>
 <body>
@@ -14,7 +15,11 @@
 
     <nav>
         <ul>
-            <li
+            <li>line one</li>
+            <li>line one</li>
+            <li>line one</li>
+            <li>line one</li>
+            <li>line one</li>
         </ul>
     </nav>
 </aside>
