exercise grid-layout updated and complete
order-pizza structure started

--- a/css/bootstrap.html
+++ b/css/bootstrap.html
@@ -34,7 +34,11 @@
 <h1>Hello, World!</h1>
 
 <!-- Main page content -->
-
+<ul class="nav nav-tabs">
+    <li class="active"><a href="#tab1" data-toggle="tab">Shipping</a></li>
+    <li><a href="#tab2" data-toggle="tab">Quantities</a></li>
+    <li><a href="#tab3" data-toggle="tab">Summary</a></li>
+</ul>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
