--- a/math-js.html
+++ b/math-js.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Split-join</title>
+    <title>math-js</title>
 </head>
 <body>
-<script src="js/planets-string.js"></script>
-
+<script src="js/circle.js"></script>
 </body>
 </html>
