--- a/planets-js.html
+++ b/planets-js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>planets-js</title>
 </head>
 <body>
 <script src="js/planets-array.js"></script>
