--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -56,21 +56,42 @@
 <script src="js/jquery-2.2.4.js"></script>
 
 <script>
+//selector exercise
+//    var contents = $("#hello").text();
+//    alert(contents);
+//
+//    var seeIt = $("#see").text();
+//    console.log(seeIt);
+//
+//    var list = $('.codeup').css('border', "1px solid red");
+//
+//
+//    alert.($('h1').text());
+//
+//    var solid = $("li").css("font-size", "20px");
+//
+//    var highlight= $("h1, p, li").css("background-color","yellow");
 
-    var contents = $("#hello").text();
-    alert(contents);
+//events exercise
 
-    var seeIt = $("#see").text();
-    console.log(seeIt);
+var change = $('h1').click(function(){
+    $(this).css('background-color',"green");
+});
 
-    var list = $('.codeup').css('border', "1px solid red");
+var big = $('p').dblclick(function () {
+    $(this).css("font-size","18px");
+});
+
+var red = $("li").hover(
+    function(){
+        $(this).css("color", "red");
+    },
+    function(){
+        $(this).css('color', 'black')
+    }
+);
 
 
-    alert.($('h1').text());
-
-    var solid = $("li").css("font-size", "20px");
-
-    var highlight= $("h1, p, li").css("background-color","yellow");
 
 </script>
 
